k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedconnect-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedconnect-front
  template:
    metadata:
      labels:
        app: schedconnect-front
    spec:
      containers:
        - name: schedconnect-front
          image: juliannot3691/schedconnect-front:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: schedconnect-front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
